# iam

./: .gitignore  .markdownlint.json  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  README.md  TASKS.md  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml  skills-lock.json
.claude/: settings.json  settings.local.json
.claude/agents/: go-code-reviewer.md
.devcontainer/: devcontainer.json
.github/workflows/: 01-ci.yaml
app/: main.go
dockerfiles/: Dockerfile
docs/: PRD.md  README.md  REQUIREMENTS.md  project-conventions.md
docs/PRD/: 00-executive-summary.md  01-document-overview.md  02-product-overview.md  03-system-architecture.md  03-user-analysis.md  04-requirements-overview.md  06-non-functional-requirements.md  07-business-flows.md  08-risks-and-dependencies.md  09-success-metrics.md  10-appendix-user-stories.md  11-future-roadmap.md  README.md
docs/REFERENCES/: README.md  data-permission.md  jwt-basics.md  mfa-totp.md  multi-tenancy-architecture.md  oauth-2.0-basics.md  oidc-basics.md  permission-models.md  token-strategy.md
docs/TDD/: 001-iam-system-architecture-design.md  002-admin-console-frontend.md  003-backend-framework-selection.md  (+1 more)
etc/: dev.yaml
issues/: 001-requirements-gap-checklist.md  002-clarify-registration-and-tenant-binding.md  003-finalize-application-isolation-scope.md  004-align-internal-service-auth-design.md  005-freeze-permission-model-v1.md  README.md
scripts/: check-container.sh  ci-local.sh  docker-build.sh  docker-pre-build.sh  docker-push-ghcr.sh  init.sh  proxy.sh
sql/: 001_init.sql
tests/: conftest.py
(+130 files in other folders)
